--- a/blog/templates/articles.ejs
+++ b/blog/templates/articles.ejs
@@ -3,9 +3,9 @@
     <div id="main-inner">
         <div id="topnav">
             <ul>
-                <li><a href="/index.html">首页</a></li>
+                <li><a href="./index.html">首页</a></li>
                 <li class="sep"> | </li>
-                <li><a href="/tag.html">标签</a></li>
+                <li><a href="./tag.html">标签</a></li>
                 <% include inc/navbar %>
             </ul>
             <div style="clear:both;"></div>
@@ -18,7 +18,7 @@
         </div>
         <div id="article-tags">
         <% article.tags.forEach(function (tag) { %>
-        <a class="tag" href="/tag.html#<%= tag %>"><%= tag %></a>
+        <a class="tag" href="./tag.html#<%= tag %>"><%= tag %></a>
         <% }); %>
         </div>
         <div id="article-content">
