--- a/blog/templates/index.ejs
+++ b/blog/templates/index.ejs
@@ -3,9 +3,9 @@
     <div id="main-inner">
         <div id="topnav">
             <ul>
-                <li><a href="/index.html">首页</a></li>
+                <li><a href="./index.html">首页</a></li>
                 <li class="sep"> | </li>
-                <li><a href="/tag.html">标签</a></li>
+                <li><a href="./tag.html">标签</a></li>
                 <% include inc/navbar %>
             </ul>
             <div style="clear:both;"></div>
@@ -13,7 +13,7 @@
         <div id="aboutme"><p><%- site.master.about %></p></div>
         <div id="tag-cloud">
             <% coreTags.forEach(function (tag) { %>
-            <a href="/tag.html#<%= tag.label %>"><%= tag.label %><span class="count">×<%= tag.count %></span></a>
+            <a href="./tag.html#<%= tag.label %>"><%= tag.label %><span class="count">×<%= tag.count %></span></a>
             <% }) %>
             <div style="clear:both;"></div>
         </div>
@@ -24,7 +24,7 @@
                 <p class="abstract">&lt;摘要&gt;: <%= ar.abstract %></p>
                 <p class="meta">作者 <%= ar.author %> | 发布于 <%= ar.postedOn %> | Tags 
                     <% ar.tags.forEach(function (tag) { %>
-                    <a class="tag" href="/tag.html#<%= tag %>"><%= tag %></a>
+                    <a class="tag" href="./tag.html#<%= tag %>"><%= tag %></a>
                     <% }) %>
                 </p>
             </div>
