--- a/blog/templates/inc/footer.ejs
+++ b/blog/templates/inc/footer.ejs
@@ -1,7 +1,7 @@
         <div id="footer">
             <div id="footer-inner">
-			   <p><a href="www.buaa.edu.cn"><img src="<%= site.copyright.cpimage1 %>" width="400"/></p>
-               <p><a href="vrlab.buaa.edu.cn"><img src="<%= site.copyright.cpimage2 %>"  width="400"/></p>
+			   <p><a href="/"><img src="<%= site.copyright.cpimage1 %>" width="400"/></p>
+               <p><a href="/"><img src="<%= site.copyright.cpimage2 %>"  width="400"/></p>
                <p id="copyright">Copyright (c) <%= site.copyright.beginYear %>-<%= site.copyright.endYear %> <%= site.copyright.owner %></p>
             </div>
         </div>
